--- a/.github/workflows/build-test.yaml
+++ b/.github/workflows/build-test.yaml
@@ -11,5 +11,5 @@ jobs:
       - uses: actions/checkout@v2
       - name: Test TypeScript build
         run: |
-          npm intall
+          npm install
           npm run build
